12-kuber-homeworks-3.3/src/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app
spec:
  selector:
    app: backend
  ports:
    - name: multitool
      port: 80
      targetPort: 80
