12-kuber-homeworks-3.3/src/cache-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: cache
  namespace: app
spec:
  selector:
    app: cache
  ports:
    - name: multitool
      port: 80
      targetPort: 80
