12-kuber-homeworks-3.3/src/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: app
spec:
  selector:
    app: frontend
  ports:
    - name: multitool
      port: 80
      targetPort: 80
