12-kuber-homeworks-3.3/src/common-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: app
spec:
  podSelector: {}
  policyTypes:
  - Ingress
